src/_includes/assets/scss/base/_utils.scss
// Mixins.
@mixin content-padding($padding-vertical: 0) {
  padding: $padding-vertical 1.5rem;
}

// Placeholders.
%content-padding-inner {
  max-width: var(--content-width);
  margin: auto;
  padding: 2rem 1rem;

  @include media('>small') {
    padding: 3rem 0;
  }

  @include media('>medium') {
    padding: 3.5rem 0;
  }
}

// Accessibility fun!
.skip-link:not(:focus) {
  @extend .visually-hidden;
}

.skip-link:focus {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  padding: 20px;
  background-color: var(--text-color);
  color: var(--accent-color);
  line-height: 1;
  text-decoration: none;
  font-weight: 700;
  font-size: var(--step-0);
}

// General shit that doesn't belong anywhere else.
.heading-permalink {
  margin-left: 0.625rem;
  box-shadow: none;
  color: transparent;

  &:hover {
    box-shadow: none;
    color: var(--primary-link);
  }
}

.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

img[src$='about-aubrey.jpg'] {
  max-width: 18.75rem;

  @include media('>medium') {
    margin-top: 0.5rem;
    margin-right: 1.5rem;
    float: left;
  }
}

